--- a/package.json
+++ b/package.json
@@ -1,25 +1,50 @@
 {
-  "name": "Cipher",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "react": "^16.8.5",
-    "react-dom": "^16.8.5",
-    "react-scripts": "2.1.8"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+     "name": "Cipher",
+     "version": "0.1.0",
+     "private": true,
+     "dependencies": {
+          "dotenv": "^7.0.0",
+          "react": "^16.8.5",
+          "react-dom": "^16.8.5",
+          "react-flexbox-grid": "^2.1.2",
+          "react-router": "^5.0.0",
+          "react-router-dom": "^5.0.0",
+          "react-scripts": "2.1.8",
+          "node-sass": "^4.11.0"
+     },
+     "scripts": {
+          "start": "react-scripts start",
+          "build": "react-scripts build",
+          "test": "react-scripts test",
+          "eject": "react-scripts eject"
+     },
+     "eslintConfig": {
+          "extends": "react-app"
+     },
+     "devDependencies": {
+          "@commitlint/cli": "^7.5.2",
+          "@commitlint/config-conventional": "^7.5.0",
+          "dotenv": "^7.0.0",
+          "husky": "^1.3.1",
+          "lint-staged": "^8.1.5",
+          "prettier": "1.16.4"
+     },
+     "husky": {
+          "hooks": {
+               "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
+               "pre-commit": "lint-staged"
+          }
+     },
+     "lint-staged": {
+          "*.{js,json,css,md}": [
+               "prettier --write",
+               "git add"
+          ]
+     },
+     "browserslist": [
+          ">0.2%",
+          "not dead",
+          "not ie <= 11",
+          "not op_mini all"
+     ]
 }
