--- a/package.json
+++ b/package.json
@@ -3,14 +3,21 @@
      "version": "0.1.0",
      "private": true,
      "dependencies": {
+          "axios": "^0.18.0",
           "dotenv": "^7.0.0",
+          "node-sass": "^4.11.0",
           "react": "^16.8.5",
           "react-dom": "^16.8.5",
           "react-flexbox-grid": "^2.1.2",
+          "react-redux": "^6.0.1",
           "react-router": "^5.0.0",
           "react-router-dom": "^5.0.0",
           "react-scripts": "2.1.8",
-          "node-sass": "^4.11.0"
+          "redux": "^4.0.1",
+          "redux-logger": "^3.0.6",
+          "redux-persist": "^5.10.0",
+          "redux-persist-transform-encrypt": "^2.0.1",
+          "redux-thunk": "^2.3.0"
      },
      "scripts": {
           "start": "react-scripts start",
