--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
           "react": "^16.8.5",
           "react-dom": "^16.8.5",
           "react-flexbox-grid": "^2.1.2",
+          "react-google-login": "^5.0.2",
           "react-redux": "^6.0.1",
           "react-router": "^5.0.0",
           "react-router-dom": "^5.0.0",
