--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
      "version": "0.1.0",
      "private": true,
      "dependencies": {
+          "antd": "^3.15.1",
           "axios": "^0.18.0",
           "dotenv": "^7.0.0",
           "node-sass": "^4.11.0",
           "react": "^16.8.5",
           "react-dom": "^16.8.5",
-          "react-flexbox-grid": "^2.1.2",
           "react-google-login": "^5.0.2",
           "react-redux": "^6.0.1",
           "react-router": "^5.0.0",
