--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
      "dependencies": {
           "antd": "^3.15.1",
           "axios": "^0.18.0",
+          "crypto-js": "^3.1.9-1",
           "dotenv": "^7.0.0",
           "node-sass": "^4.11.0",
           "react": "^16.8.5",
