--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
           "axios": "^0.18.0",
           "crypto-js": "^3.1.9-1",
           "dotenv": "^7.0.0",
+          "moment": "^2.24.0",
           "node-sass": "^4.11.0",
           "react": "^16.8.5",
           "react-dom": "^16.8.5",
